--- a/training-app/package.json
+++ b/training-app/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "hello-react",
+  "name": "react-routing-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
