updated training app

--- a/training-app/package.json
+++ b/training-app/package.json
@@ -2,6 +2,7 @@
   "name": "hello-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
